--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "APACHE",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc --declaration"
+    "build": "tsc --declaration",
+    "prepare": "husky install"
   },
   "dependencies": {
     "oracledb": "^5.2.0",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
-    "@types/node": "^16.6.1"
+    "@types/node": "^16.6.1",
+    "husky": "7.0.4"
   }
 }
